# dht-torznab

./: .bandit.yml  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  Pipfile  README.md  alembic.ini  beanstalkd.Dockerfile  compose.prod.override.yml  compose.yml  create_user.py  docker-compose.yml  gunicorn.conf.py  listener.py  manage.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: continuous-integration.yml
api/: __init__.py  auth.py  crud.py  database.py  factories.py  main.py  models.py  negotiation.py  schemas.py  serializers.py  tests.py  torznab.py  views.py
api/management/commands/: create_user.py  import_magneticod_db.py
api/migrations/: 0001_initial.py  0002_files_related_names.py  __init__.py
api/static/: caps.xml
api/templates/: caps.xml  feed.xml  index.xml
api/views/: __init__.py  torrents.py  torznab.py
config/gluetun/: post-rules.txt
dht_torznab/: create_ddl.py  db.py  listener.py  models.py  peer_count_updater.py  queries.py  schemas.py  settings.py  torrent_info_daemon.py
dht_torznab/alembic/: env.py
dht_torznab/alembic/versions/: 0f3f9c7c9418_denormalize_torrent_file_count_and_.py  597759a22daf_initial_migrations.py  a12e8d5a1107_initial_migrations.py
dht_torznab/api/: endpoints.py  enums.py  main.py  security.py  torznab.py
dht_torznab/api/static/: capabilities.xml
docker/: Dockerfile  entrypoint.sh  magneticod.Dockerfile
torznab/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
