[tool.poetry]
name = "dht-torznab"
version = "0.1.0"
description = ""
authors = ["guillaumedsde <30023543+guillaumedsde@users.noreply.github.com>"]
license = "MIT"
packages = [{ include = "dht_torznab" }]

[tool.poetry.dependencies]
python = "^3.11"
greenstalk = "2.0.0"
sqlalchemy = { version = "2.0.13", extras = ["asyncio"] }
asyncpg = "0.27.0"
pydantic = "1.10.7"
sqlalchemy-utils = "0.41.1"
fastapi = "0.95.2"
uvicorn = { version = "0.22.0", extras = ["standard"] }
lxml = "4.9.2"


[tool.poetry.group.dev.dependencies]
ruff = "0.0.265"
mypy = "1.3.0"
black = "23.3.0"
lxml-stubs = "0.4.0"
types-sqlalchemy-utils = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["ALL"]
ignore = [
    # Missing docstring in public module
    "D100",
    # Missing docstring in public class
    "D101",
    # Missing docstring in public package
    "D104",
    # no-blank-line-before-class
    "D211",
    # multi-line-summary-second-line
    "D213",
    # Missing type annotation for `self` in method
    "ANN101",
]

src = ["dht_torznab"]

# Same as Black.
line-length = 88

target-version = "py311"

[tool.ruff.per-file-ignores]
"dht_torznab/api/torznab.py" = ["SLF001"]
"dht_torznab/settings.py" = ["D106"]


[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
