[tool.poetry]
name = "dht-torznab"
version = "0.1.0"
description = ""
authors = ["guillaumedsde <30023543+guillaumedsde@users.noreply.github.com>"]
license = "MIT"
packages = [{ include = "dht_torznab" }]

[tool.poetry.dependencies]
python = "^3.11"
greenstalk = "2.0.0"
sqlalchemy = { version = "2.0.15", extras = ["asyncio"] }
asyncpg = "0.27.0"
pydantic = "1.10.8"
sqlalchemy-utils = "0.41.1"
fastapi = "0.96.0"
uvicorn = { version = "0.22.0", extras = ["standard"] }
lxml = "4.9.2"
gunicorn = "20.1.0"
# NOTE: install from git since pypi packages are not up to date
aio-btdht = { git = "https://github.com/bashkirtsevich-llc/aiobtdht.git", rev = "b98249b56514b59db1f49d981494da1bfd9a9ae3" }
aio-krpc-server = { git = "https://github.com/bashkirtsevich-llc/aiokrpc.git", rev = "fe0b18a98d4dc19034f8152afbae78fb600830e2" }
alembic = "1.11.1"

[tool.poetry.group.dev.dependencies]
ruff = "0.0.270"
mypy = "1.3.0"
# NOTE: keep in sync with github action version
black = "23.3.0"
lxml-stubs = "0.4.0"
types-sqlalchemy-utils = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["ALL"]
ignore = [
    # Missing docstring in public module
    "D100",
    # Missing docstring in public class
    "D101",
    # Missing docstring in public package
    "D104",
    # no-blank-line-before-class
    "D211",
    # multi-line-summary-second-line
    "D213",
    # Missing type annotation for `self` in method
    "ANN101",
    # Missing author in TODO
    "TD002",
    # Missing issue link on the line following this TODO
    "TD003",
]

src = ["dht_torznab"]

# Same as Black.
line-length = 88

target-version = "py311"

[tool.ruff.per-file-ignores]
"dht_torznab/api/torznab.py" = ["SLF001"]
"dht_torznab/settings.py" = ["D106"]
"dht_torznab/schemas.py" = ["A003"]
"dht_torznab/models.py" = ["A003"]
"dht_torznab/alembic/versions/*.py" = ["D103"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Security",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
files = ["dht_torznab/"]
